--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn-icons.flaticon.com/png/512/2171/premium/2171990.png?token=exp=1641988862~hmac=43fb2ad20039620e6485f92cdd18572d"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
     <title>Dog Sticker App 🐶</title>
+    <meta name="title" content="Dog Sticker App 🐶" />
+    <meta name="description" content="Dog Sticker App 🐶" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dog-stickers-app.vercel.app/" />
+    <meta property="og:title" content="Dog Sticker App 🐶" />
+    <meta property="og:description" content="Dog Sticker App 🐶" />
+    <meta
+      property="og:image"
+      content="https://color-matching-game.vercel.app/images/thumbnail.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://dog-stickers-app.vercel.app/"
+    />
+    <meta property="twitter:title" content="Dog Sticker App 🐶" />
+    <meta property="twitter:description" content="Dog Sticker App 🐶" />
+    <meta
+      property="twitter:image"
+      content="https://color-matching-game.vercel.app/images/thumbnail.png"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600&display=swap"
       rel="stylesheet"
